<resources>
    <string name="app_name">Ripple</string>
    <string name="login_text">Ripple</string>
    <string name="button_send">Send</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="survey_welcome">RIPPLE.</string>
    <string name="survey_subwelcome">Track your carbon footprint.</string>
    <string name="survey_blurb">Enter Stuff here:</string>

    <string name="confirm_password">Confirm Password</string>
    <string name="action_register">Register</string>
    <string name="login_hint">Registered? Login!</string>
    <string name="register_ripple">Register</string>

    <string name="login_ripple">RIPPLE.</string>
    <string name="register_hint">New? Register here.</string>
    <string name="wavesImage">wave_description</string>

    <string name="home_question">Select your type of residence 🏠</string>
    <string name="home_card1">Single Detached House</string>

    <string name="sign_out">Sign Out</string>
    <string name="signed_out">Sign out v2</string>
    <string name="disconnect">Disconnect</string>
    <string name="references">References</string>
    <string name="reference_message">We would like to acknowledge the following sources that were used in this app:</string>
    <string name="hi">"Hi, "</string>
    <string name="enter">Ripple Track</string>
    <string name="menu_settings">Settings</string>
    <string name="stats">Stats</string>
    <string name="compete">Compete</string>
    <string name="fun">Fun</string>
    <string name="back">back</string>
    <string name="residence_home_txt">Semi Detached Home</string>
    <string name="next">next</string>
    <string name="settings">Settings</string>

    <string name="test">test</string>
    <string name="survey_greeting">Welcome to Ripple!</string>
    <string name="survey_get_started">Please fill out the preliminary usage survey to get started.</string>
    <string name="survey_go">Get Started</string>
    <string name="canada_question">Where do you call home? 🇨🇦</string>

    <string name="spinner_prompt">"Select Province/Territory"</string>

    <string name="carbon_insights">Carbon Insights</string>
    <string name="witness_the_ripple_effect">Witness the Ripple Effect</string>
    <string name="today_button">Today</string>
    <string name="week_button">Week</string>
    <string name="month_button">Month</string>
    <string name="delele_this_later">Hi Ivy</string>
    <string name="carbon_footprint_breakdown">Carbon Foot Print Breakdown</string>
    <string name="insert_some_insight_here">insert some insight here</string>
    <string name="ripple_streaks">Ripple Streaks</string>
    <string name="product_input">Product Input</string>
    <string name="title_activity_transportation1">Map</string>
    <string name="map_button">Calculate Carbon Footprint</string>
    <string name="land_vehicle">Vehicle - Car</string>
    <string name="air_travel">Air Travel</string>
    <string name="service_input">Service Input</string>

    <string name="product_prompt">"Select Product Type"</string>
    <string name="service_prompt">"Select Service Type"</string>
    <string name="map_query_hint">Add Locations 1 &amp; 2</string>
    <string name="clear_all">Clear All</string>
    <string name="title_activity_settings">Settings</string>

    <string name="dialog_title">Please select your answer:</string>
    <string name="dialog_q">Domestic or International Flight?</string>
    <string name="domestic">Domestic</string>
    <string name="flight_type">Flight Type</string>
    <string name="international">International</string>

    <string-array name="canada_spinner">
        <item>Alberta</item>
        <item>British Columbia</item>
        <item>Manitoba</item>
        <item>New Brunswick</item>
        <item>Newfoundland and Labrador</item>
        <item>Nova Scotia</item>
        <item>Northwest Territories</item>
        <item>Nunavut</item>
        <item>Ontario</item>
        <item>Prince Edward Island</item>
        <item>Quebec</item>
        <item>Saskatchewan</item>
        <item>Yukon</item>
    </string-array>

    <string name="omnivore">Omnivore</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="vegan">Vegan</string>
    <string name="no_beef">No Beef</string>
    <string name="no_pork">No Pork</string>
    <string name="no_red_meat">No Red Meat</string>
    <string name="describe_your_diet">Describe your diet 🍍</string>
    <string name="apartment_building">Apartment Building</string>
    <string name="town_house">Town House</string>
    <string name="compete_intro">Challenge friends to lower their Carbon Footprint! 🏆</string>
    <string name="compete_email">Enter email address</string>
    <string name="carbon_footprint">A carbon footprint is the measure of greenhouse gases produced by human-related activities, expressed as the carbon dioxide equivalent. The carbon dioxide equivalent (CO2 e) compares all the greenhouse gases, relative to carbon dioxide based on its global warming potential (GWP). Different gases each have different rates of heat absorption in the atmosphere due to factors like their chemical properties.</string>
    <string name="carbon_explain">What is a Carbon Footprint? 💭</string>
    <string name="go">Go</string>
    <string name="button_methods">Carbon Tracking Methodology</string>
    <string name="image_references">Image References</string>
    <string name="challenge1">Challenge: Instead of drinking from plastic water bottles, use a reuseable waterbottle!</string>
    <string name="challenge2">Challenge: Instead of driving, take the public transit!</string>
    <string name="eco_tips_from_ripple">ECO TIPS FROM RIPPLE</string>
    <string name="ripple_tip_1">Ripple Tip 1:</string>
    <string name="eat_less_meats_particularly_red_meats_beef_is_the_most_pollutant_as_they_emit_large_amounts_of_methane_over_their_life_span">Eat less meats - particularly, red meats. Beef is the most pollutant as they emit large amounts of methane over their life span</string>
    <string name="ripple_tip_2">Ripple Tip 2</string>
    <string name="dry_clothing_on_a_clothing_line_to_conserve_energy_leverage_the_power_of_the_sun">Dry clothing on a clothing line to conserve energy. Leverage the power of the sun!</string>
    <string name="ripple_tip_3">Ripple Tip 3</string>
    <string name="when_buying_clothing_shop_second_hand_limit_buying_fast_fashion_articles_which_are_not_designed_to_last">When buying clothing, shop second-hand! Limit buying fast fashion articles, which are not designed to last</string

</resources>

