<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".TransportationActivity"
    xmlns:tools="http://schemas.android.com/tools">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <SearchView
        android:id="@+id/search_map"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="#FFFFFF"
        android:queryHint="@string/map_query_hint"
        android:elevation="7dp"
        android:iconifiedByDefault="false"
        android:layout_alignParentTop="true" />

    <Button
        android:id="@+id/enter_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="63dp"
        android:onClick="transportTrack"
        android:text="@string/map_button" />

    <Button
        android:id="@+id/clear_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:onClick="onClear"
        android:text="@string/clear_all"
        tools:ignore="RelativeOverlap" />

    <Switch
        android:id="@+id/switch_flight_type"
        android:paddingHorizontal="3dp"
        android:elevation="7dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:checked="true"
        android:layout_marginTop="84dp"
        android:text="@string/domestic" />

</RelativeLayout>