<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".FunFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_fun"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/springGreen"
        android:elevation="4dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/eco_tips_from_ripple"
        android:textColor="@color/springGreen"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="529dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bermuda"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/ripple_tip_1"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/nightSky"
            android:textSize="20sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="4dp"
            android:layout_marginBottom="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/montserrat"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/eat_less_meats_particularly_red_meats_beef_is_the_most_pollutant_as_they_emit_large_amounts_of_methane_over_their_life_span"
                android:textAlignment="center"
                android:textColor="@color/nightSky"
                android:textSize="14sp" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/springGreen"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/ripple_tip_2"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/nightSky"
            android:textSize="20sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="4dp"
            android:layout_marginBottom="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/montserrat"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/dry_clothing_on_a_clothing_line_to_conserve_energy_leverage_the_power_of_the_sun"
                android:textAlignment="center"
                android:textColor="@color/nightSky"
                android:textSize="14sp" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/ripple_tip_3"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/nightSky"
            android:textSize="20sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="4dp"
            android:layout_marginBottom="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/montserrat"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/when_buying_clothing_shop_second_hand_limit_buying_fast_fashion_articles_which_are_not_designed_to_last"
                android:textAlignment="center"
                android:textColor="@color/nightSky"
                android:textSize="14sp" />

        </androidx.cardview.widget.CardView>


    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>